k8s-manifests/base/mlops/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlops
  labels:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/component: tracking-server
    app.kubernetes.io/part-of: mlops-stack
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mlflow
